# p_group_cohomology

./: .travis.yml  INSTALL  README.md  SPKG.txt  meataxe.patch  spkg-check  spkg-install
dist_helpers/: create_dist.sh  put_package_into_sage.sh
doc/: builder.py
doc/common/: __init__.py  build_options.py  conf.py  sage_autodoc.py  sageinspect.py
doc/en/reference/: conf.py  index.rst
downstream/: SPKG.txt  spkg-check  spkg-install  spkg-install.in
gap_helper/: LICENSE  PackageInfo.g  README.md  init.g  makedoc.g  read.g
gap_helper/gap/: GapMB.g  GapMaxels.g  GapSgs.g  p_group_cohomology_helper.gd
gap_helper/tst/: testall.g
present/: Makefile.in  config.h.in  configure  configure.scan
present/autom4te.cache/: output.0  output.2  output.4  output.5  output.6  output.7  requests  traces.0  traces.1  traces.2  traces.3  traces.4  traces.5  traces.6  traces.7
present/src/: Makefile.in
singular_helper/: dickson.lib
src/: MANIFEST.in  Makefile  README  modular_resolution.pxd  setup.py
src/db/: LICENCE
src/doc/: Makefile
src/doc/source/: auxiliaries.rst  conf.py  index.rst  isomorphism_test.rst  pGroupCohomology.rst
src/pGroupCohomology/: GapMB  GapMB.g  GapMaxels.g  GapSgs.g  GroupNames.sobj  __init__.py  auxiliaries.py  barcode.py  cochain.pxd  cochain.pyx  cohomology.pyx  dickson.lib  dickson.pyx  factory.py  filterregular.lib  hilbert.pyx  isomorphism_test.py  modular_cohomology.pyx  p_group_cohomology_helper  resolution.pxd  resolution.pyx  resolution_bindings.pxd  singular_helper
src/pGroupCohomology/c_sources/: aufloesung.c  aufloesung.h  aufnahme.c  customize.h  djgerr.c  fileplus.c  fp_decls.h  meataxe.h  module.h  nBuchberger.c  perror_decls.h  pgroup.c  pgroup.h  pgroup_decls.h  (+10 more)
src/present/: AUTHORS  COPYING  ChangeLog  Makefile  Makefile.am  Makefile.in  NEWS  README  configure.ac
src/present/src/: Makefile.am  aufloesung.c  aufloesung_decls.h  aufnahme.c  aufnahme.h  aufnahme_decls.h  berlekmp2.c  customize.h  fileplus.c  fileplus.h  gi.c  mam.c  matmag.c  mim.c  mnt.c  modular_resolution.h  module.h  module_decls.h  nBuchberger.c  nBuchberger_decls.h  nDiag.h  nDiag_mod5.h  pcommon.h  perm2Gap.c  pgroup.c  pgroup.h  pgroup_decls.h  pincl.c  pincl.h  pincl_decls.h  pmatrix.c  pmatrix_decls.h  slice.c  slice_decls.h  test.reg  urbild.c  urbild_decls.h  uvr.c  uvr_decls.h  wgb.c  (+1 more)
(+1 files in other folders)
